--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@storybook/addon-a11y": "^5.0.11",
     "@storybook/addon-knobs": "^5.0.11",
     "core-js": "^2.5.4",
+    "immer": "^3.1.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
