--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/core": "^7.4.4",
     "@storybook/addon-actions": "^5.0.11",
     "@storybook/addon-console": "^1.1.0",
+    "@storybook/addon-cssresources": "^5.0.11",
     "@storybook/addon-links": "^5.0.11",
     "@storybook/addon-notes": "^5.0.11",
     "@storybook/addon-viewport": "^5.0.11",
